--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100;300;500;700&display=swap" rel="stylesheet">
   <title>Intersection Observer Scroll Animation</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  
+  <section>
+
+  </section>
+  <section class="content">
+    <div class="left">
+      <img src="img/yellow.jpg" alt="yellow" class="yellow">
+      <p>What happened last night? &#128522</p>
+      <img src="img/wave.svg" alt="wave" class="wave">
+    </div>
+    <div class="right">
+
+      <div>
+        <h2>Discover More</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet. Doloremque praesentium debitis
+          quos distinctio dolorem eveniet maiores sapiente ratione repellendus enim. Soluta dolore numquam velit
+          provident, omnis tempore facilis?</p>
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
