--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   </section>
   <section class="content">
     <div class="left">
-      <img src="img/yellow.jpg" alt="yellow" class="yellow">
-      <p>What happened last night? &#128522</p>
-      <img src="img/wave.svg" alt="wave" class="wave">
+      <img src="img/yellow.jpg" alt="yellow" class="yellow anim" data-delay="0s">
+      <p class="anim" data-delay="0.5s">What happened last night? &#128522</p>
+      <img src="img/wave.svg" alt="wave" class="wave anim" data-delay="0.7s">
     </div>
     <div class="right">
-
-      <div>
+      <div class="anim" data-delay="1s">
         <h2>Discover More</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet. Doloremque praesentium debitis
           quos distinctio dolorem eveniet maiores sapiente ratione repellendus enim. Soluta dolore numquam velit
@@ -30,6 +29,7 @@
       </div>
     </div>
   </section>
+  <script src="app.js"></script>
 </body>
 
 </html>
