--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <div class="left">
       <img src="img/yellow.jpg" alt="yellow" class="yellow anim" data-delay="0s">
       <p class="anim" data-delay="0.5s">What happened last night? &#128522</p>
-      <img src="img/wave.svg" alt="wave" class="wave anim" data-delay="0.7s">
+      <div class="wave anim" data-delay="1s"></div>
     </div>
     <div class="right">
-      <div class="anim" data-delay="1s">
+      <div class="anim" data-delay="1.5s">
         <h2>Discover More</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet. Doloremque praesentium debitis
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet. Doloremque praesentium
+          debitis
           quos distinctio dolorem eveniet maiores sapiente ratione repellendus enim. Soluta dolore numquam velit
           provident, omnis tempore facilis?</p>
       </div>
