--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
   <section class="content">
     <div class="left">
       <img src="img/yellow.jpg" alt="yellow" class="yellow anim" data-delay="0s">
-      <p class="anim" data-delay="0.5s">What happened last night? &#128522</p>
-      <div class="wave anim" data-delay="1s"></div>
+      <p class="anim recieve m1" data-delay="0.8s">Hi there!</p>
+      <p class="anim sent m2" data-delay="1.2s">Hey you &#128522</p>
+      <p class="anim recieve m3" data-delay="1.4s">So happy to mee U! &#128536</p>
+      <p class="anim sent m4" data-delay="1.8s">really!? &#128525 </p>
+      <div class="wave anim" data-delay="2.6s"></div>
     </div>
     <div class="right">
-      <div class="anim" data-delay="1.5s">
+      <div class="anim" data-delay="4s">
         <h2>Discover More</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet. Doloremque praesentium
           debitis
