playing with animations

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       <div class="wave anim" data-delay="2.6s"></div>
     </div>
     <div class="right">
-      <div class="anim" data-delay="4s">
-        <h2>Discover More</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet. Doloremque praesentium
+      <div>
+        <h2 class="anim" data-delay="4s">Discover More</h2>
+        <p class="anim" data-delay="4.8s">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, eveniet.
+          Doloremque praesentium
           debitis
           quos distinctio dolorem eveniet maiores sapiente ratione repellendus enim. Soluta dolore numquam velit
           provident, omnis tempore facilis?</p>
